assets/css/main.css
:root{
    --padding: 0 21%;
}

* {
    box-sizing: border-box;
}

/* Generic reset styles */
body {
    margin: 0;
    font-family: sans-serif;
    text-align: left;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}


/* Main styles */

.divider {
    text-align: center;
    padding:0;
}

header {
    background-image: url(../img/header_background.webp);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 675px;
    padding: var(--padding);
    display: grid;
    grid-template-rows: 1fr 2fr 1fr;
}

header div {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header div:nth-of-type(3) {
    justify-content: end;
}

header h1 {
    color: white;
    text-align: left;
    align-self: center;
    font-weight: 900;
}

nav{
    position: fixed;
}

#background_cover{
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: .8;
    position: fixed;
    display: none;
}

#popout {
    display: none;
    width: 55%;
    top: 20%;
    height: 65%;
    left: 20%;
    background: #131313;
}

#popout a{
    color: white;
    text-decoration: none;
}

#inner_popout{
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;
    grid-template-rows: 1fr;
}

#inner_popout h4{
    margin: 0;
    font-size: medium;
}

#inner_popout div:first-of-type{
    font-size: 50px;
}

#inner_popout div:first-of-type ul{
    margin-top: 25%;
    margin-left: 20%;
}

.fa-x{
    color: white;
}

#inner_popout div:nth-child(2),
#inner_popout div:nth-child(3){
    font-size: small;
    display: grid;
    grid-template-rows: 1fr 2fr 1fr;
    align-items: flex-start;
}

#inner_popout div:last-child div:first-child{
    justify-self: end;
    margin: 20px;
}

#inner_popout div:last-child ul:last-child{
    justify-self: center;
}

#inner_popout li{
    padding: 10px;
}

#small_side {
    background: black;
    width: fit-content;
    border: 1px solid white;
    left: 0%;
    top: 60%;
    height: fit-content;
}

nav#small_side ul li {
    padding: 10px;
}

button {
    border: none;
    background: transparent;
    height: 40px;
    width: 40px;
}


section:not(.divider){
    padding: var(--padding);
}

#top_section {
    padding-top: 50px;
    text-align: center;
}

#top_section h1 {
    font-size: 30px;
}

#top_section p {
    font-size: 18px;
}

#pure_marlborough,
#quality,
#wines,
#zero,
#climate {
    display: grid;
    align-items: start;
}

#pure_marlborough,
#climate {
    grid-template-columns: 2fr 3fr;
}

#climate {
    grid-template-columns: 2fr 4fr;
}

#zero {
    grid-template-columns: 4fr 2fr;
}

#climate > div > img,
#zero > div > img {
    height: 500px;
    width: 100%;
    object-fit: cover;
}

#quality{
    justify-items: flex-end;
    grid-template-columns: 1fr 1fr;
}

.rightarrows{
    text-align: right;
}

#outer_wines,
.columns_text {
    background-color: #f7f7f7;
}

.columns_text {
    height: 100%;
    width: 100%;
    padding: 15% 40px;
    line-height: 2;
}

#wines{
    grid-template-columns: 3fr 2fr 2fr;
    padding: 50px 0;
    column-gap: 50px;
    justify-items: center;
}

#wines img{
    height: 200px;
}

#wines h2{
    grid-column: 1 / 4;
}

#collage {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 2px;
}

#collage_inner{
    display: grid;
    column-gap: 2px;
    row-gap: 2px;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
}

#collage_inner img{
    height: 250px;
    width: 100%;
    object-fit: cover;
}

#collage_inner div:last-child{
    grid-column: 1/3;
}

footer {
    padding: 30px 15%;
    background-color: black;
    color: white;
    display: grid;
    grid-template-columns: 1fr 1fr;
    font-weight:900;
}

footer a {
    color: white;
    text-decoration: none;
}

footer > div:first-child{
    display: grid;
    grid-template-rows: 1fr 1fr;
}


footer > div:first-child div:last-child{
    align-self: flex-end;
    font-size:x-small
}

footer > div:last-child{
    text-align: right;
}

footer > div:last-child li:nth-of-type(3) img{
    height: 110px;
}

footer > div:last-child li{
    padding: 5px; 
}

@media (max-width:1450px){
    section#wines,
    section#pure_marlborough,
    section#quality,
    #climate,
    #zero{
        grid-template-columns: 1fr;
    }

    section#wines h2{
        grid-column: 1;
    }
    main {
        padding: 100px 5% 0;
    }
}

